UPDATE : 빌드 및 실행 예시 추가